fixes and minor changes

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 \subsection{项目}
 
 \cventry{2016.03--}{IPv4/6翻译技术的流量调度}{李星}{清华大学网络中心}{}{
-  升级IPv4/6翻译器（RFC6219）。该项目及其后续是我硕士期间工作的主要部分之一。\newline{}
+  升级IPv4/6翻译器（RFC6219）。该项目及后续工作是我研究生阶段的主要课题。\newline{}
   目的：
   \begin{itemize}
   \item 允许翻译器细粒度地选择各个流的翻译模式和上行出口
@@ -56,9 +56,9 @@
 }
 
 \vspace{0.3cm}
-\cventry{2015.10--2015.08}{新版CERNET2网管系统开发}{张辉}{清华大学网络中心}{}{
-  使用较新的工具，结合目前网管系统缺陷，为教育网提供新的网管系统。系统包含设备管
-  理，以及网络气象图的编辑和呈现等功能。\newline{}
+\cventry{2015.08--2015.10}{新版CERNET2网管系统开发}{张辉}{清华大学网络中心}{}{
+  结合目前网管系统缺陷，为教育网提供新的网管系统。系统包含设备管
+  理、网络气象图的编辑和呈现等功能。\newline{}
   贡献代码7000行左右，试运行中。\newline{}
   语言：Python，Javacript
 }
@@ -66,7 +66,7 @@
 \vspace{0.5cm}
 \subsection{科研}
 \cventry{2015.04--2015.06}{NFV的一致性更新}{李勇}{清华大学电子系}{}{
-  以Floodlight作为平台，研究SDN环境中，NFV(Middlebox)的快速一致迁移问题。提出了基本思路，改进后的算法相比
+  以Floodlight作为平台，研究SDN环境中NFV（Middlebox）的快速一致迁移问题。提出了基本思路，改进后的算法相比
   现有算法在性能和稳定性方面有很大提升。\newline{}
   作为论文二作，负责算法实现。论文投往CoNEXT2015，算法的效率得到评委肯定。\newline{}
   语言：Java，Shell
@@ -84,21 +84,21 @@
 \cvitem{了解}{Java}
 
 \section{英语}
+\cvitem{}{英语能力足以胜任日常的工作和科研需求}
 \cvitem{CET-6}{644}
 \cvitem{TOFEL}{110}
 \cvitem{TEPT}{84}
 
 \section{相关能力}
-\cvlistitem{有维护Linux服务器的经验，熟悉网络和虚拟化配置}
-\cvlistitem{英语能力足以胜任日常的工作和科研需求}
-\cvlistitem{
+\cvitem{}{有维护Linux服务器的经验，熟悉网络和虚拟化配置}
+\cvitem{}{
 有较多的项目开发经验，熟悉工程实践，具备与人交流协调的能力。
 项目内容跨度较广，可以快速学习新的知识并投入应用}
-\cvlistitem{了解Linux操作系统平台，熟悉开发和编译工具链，了解Linux网络编程}
+\cvitem{}{了解Linux操作系统平台，熟悉开发和编译工具链，了解Linux网络编程}
 
 \section{时间}
-\cvitem{每周时间}{除去毕设答辩的时间节点（4月20日左右中期答辩，6月15日左右结题答
+\cvitem{每周时间}{除去毕设答辩的时间节点（4月12日左右中期答辩，6月中旬结题答
   辩）可能需要2-3天准备时间，每周可以工作4-5天}
-\cvitem{实习时长}{至少可以工作7月份，如果时间允许可以继续实习}
+\cvitem{实习时长}{4月可以开始工作，至少工作至7月，如果时间允许可以继续实习}
 
 \end{document}
