change time format

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \makecvtitle
 
 \section{教育}
-\cventry{2012.09--2016.07}{本科（在读）}{清华大学}{}{}{
+\cventry{2012.09\\2016.07}{本科（在读）}{清华大学}{}{}{
   清华大学电子工程系\, 电子信息科学与技术专业
 }
 \cvitem{推免}{清华大学网络研究院\, 信息与通信工程专业\, 硕士研究生}
@@ -31,7 +31,7 @@
 \section{经历}
 \subsection{项目}
 
-\cventry{2016.03--}{IPv4/6翻译技术的流量调度}{李星}{清华大学网络研究院}{}{
+\cventry{2016.03\\}{IPv4/6翻译技术的流量调度}{李星}{清华大学网络研究院}{}{
   升级IPv4/6翻译器（RFC6219）
   \begin{itemize}
   \item 允许翻译器细粒度地选择各个流的翻译模式和上行出口
@@ -44,7 +44,7 @@
 \vspace{0.3cm}
 %\cventry{2016.01--2016.02}{使用应用层代理解决老旧网站的IPv6访问}{李星}{清华大学网络研究院}{}{}
 
-\cventry{2015.10--2015.12}{Openstack IPv6环境搭建与测试}{李星}{清华大学网络研究院}{}{
+\cventry{2015.10\\2015.12}{Openstack IPv6环境搭建与测试}{李星}{清华大学网络研究院}{}{
   在Openstack Liberty版本中完成了三种IPv6环境的配置和测试。(\href{https://github.com/wenxin-wang/puppet-phystack}{\urlblue{Github}})\\
   (Slaac，DHCPv6 Stateless，DHCPv6Stateful)\\
   上游接受的补丁：
@@ -57,7 +57,7 @@
 }
 
 \vspace{0.3cm}
-\cventry{2015.08--2015.10}{新版CERNET2网管系统开发}{张辉}{清华大学网络研究院}{}{
+\cventry{2015.08\\2015.10}{新版CERNET2网管系统开发}{张辉}{清华大学网络研究院}{}{
   结合目前网管系统缺陷，为教育网提供新的网管系统。系统包含设备管
   理、网络气象图的编辑和呈现等功能。\\
   贡献代码7000行左右，试运行中。\\
@@ -66,7 +66,7 @@
 
 \newpage{}
 \subsection{科研}
-\cventry{2015.04--2015.06}{NFV的一致性更新}{李勇}{清华大学电子工程系}{}{
+\cventry{2015.04\\2015.06}{NFV的一致性更新}{李勇}{清华大学电子工程系}{}{
   以Floodlight作为平台，研究SDN环境中NFV的快速一致迁移问题。\\
   提出了基本思路，改进后的算法相比现有算法在性能和稳定性方面有很大提升。\\
   作为论文二作，负责算法实现。论文投往CoNEXT2015，算法的效率得到评委肯定。\\
@@ -74,7 +74,7 @@
 }
 
 \vspace{0.3cm}
-\cventry{2014.10--2015.01}{利用Docker和OpenBTS搭建虚拟GSM基站池}{}{清华大学电子工程系}{}{
+\cventry{2014.10\\2015.01}{利用Docker和OpenBTS搭建虚拟GSM基站池}{}{清华大学电子工程系}{}{
   利用Linux容器搭建可动态分配资源的轻量化虚拟GSM基站池。\\
   最终实现两个基站同时运行于一台宿主机，以及核心网与基站分离的原型。\\
   语言：Shell，C++
