--- a/preambles/fonts.tex
+++ b/preambles/fonts.tex
@@ -1,7 +1,5 @@
 \usepackage{fontspec}
 \usepackage{xunicode}
-\usepackage{xeCJK}
-%\xeCJKsetup{AutoFakeBold=true, AutoFakeSlant=true, EmboldenFactor=1}
-\xeCJKsetup{AutoFakeSlant=true}
-\setCJKmainfont{WenQuanYi Micro Hei}
-\setCJKmonofont{WenQuanYi Micro Hei Mono}
+\usepackage[BoldFont,SlantFont]{xeCJK}
+\setCJKmainfont{SimSun}
+ \setCJKmonofont{SimHei}
