--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@
 
 \vspace{0.3cm}
 \cventry{2013.08--2013.10}{\mdseries 2013年第15届清华大学电子设计竞赛官方网站制作}{}{}{}{
-  独立完成前端和后端的实现。网站包含选手和团队报名、赛事预告、文档下载和选手论坛，为比赛主办方继续沿用。\\
+  独立实现前端和后端。网站实现了队伍和赛事数据处理、新闻公告、文件传输和论坛功能，为比赛主办方继续沿用。\\
   语言：Ruby
 }
 
@@ -71,12 +71,15 @@
 \subsection{科研}
 \cventry{2015.04--2015.06}{\mdseries NFV的一致性更新}{}{清华大学未来网络与通信实验室}{}{
   研究SDN环境中NFV的快速一致迁移问题。\\
-  提出了基本思路，改进后的算法相比现有算法在性能和稳定性方面有很大提升。\\
+  提出了基本思路，改进后的算法相比现有算法在性能和稳定性方面有很大提升。作为论文二作，负责算法实现。\\
+  Yujie Liu, \textbf{Wenxin Wang}, Jiaqiang Liu, Yong Li, Haoyu Song, Yue Wang, and Jian
+  Yuan, \textit{Consistent State Updates for Virtualized Network Function Migration},
+  IEEE Transactions on Services Computing (under review).\\
   语言：Java，C，Shell
 }
 
 \vspace{0.3cm}
-\cventry{2014.10--2015.01}{\mdseries 利用Docker和OpenBTS搭建虚拟GSM基站池}{}{NiuLab}{}{
+\cventry{2014.10--2015.01}{\mdseries 利用Docker和OpenBTS搭建虚拟GSM基站池}{}{网络融合实验室}{}{
   利用Linux容器搭建可动态分配资源的轻量化虚拟GSM基站池。\\
   最终实现两个基站同时运行于一台宿主机，以及核心网与基站分离的原型。\\
   语言：Shell，C++
@@ -90,11 +93,11 @@
 }
 
 \section{编程语言}
-\cvitem{精通}{C++，Shell，Python，Javascript}
+\cvitem{精通}{Shell，C++，Python，Javascript}
 \cvitem{熟悉}{Java，Ruby}
 
 \section{相关能力}
-\cvitem{Linux}{有4年Linux环境的工作经验}
+\cvitem{Linux}{有4年（deb、rpm系）Linux环境的工作经验}
 \cvitem{}{熟悉开发和编译工具链，完成（Cross）Linux From Scratch编译和运行}
 \cvitem{}{了解Linux网络编程}
 \vspace{0.3cm}
@@ -104,9 +107,9 @@
 \cvitem{开发能力}{有较多的项目开发经验，熟悉工程实践，具备与人交流协调的能力}
 \cvitem{}{项目内容跨度较广，可以快速学习新的知识并投入应用}
 
-\section{时间}
-\cvitem{每周时间}{除去毕设答辩的时间节点（4月12日左右中期答辩，6月中旬结题答
-  辩）可能需要2-3天准备时间，每周可以工作4-5天}
-\cvitem{实习时长}{4月可以开始工作，至少工作至7月，如果时间允许可以继续实习}
+% \section{时间}
+% \cvitem{每周时间}{除去毕设答辩的时间节点（4月12日左右中期答辩，6月中旬结题答
+%   辩）可能需要2-3天准备时间，每周可以工作4-5天}
+% \cvitem{实习时长}{4月可以开始工作，至少工作至7月，如果时间允许可以继续实习}
 
 \end{document}
