--- a/main.tex
+++ b/main.tex
@@ -24,9 +24,8 @@
 }
 \cvitem{推免}{清华大学网络研究院\, 信息与通信工程专业\, 硕士研究生}
 
-\cvitem{课程}{\minusblue{--} 计算机程序设计基础 (C++)}
-\cvlistdoubleitem{数据与算法 (C++)}{计算机网络}
-\cvlistdoubleitem{操作系统}{数据库}
+\cvitem{课程}{计算机程序设计基础 (C++)，数据与算法 (C++)}
+\cvitem{}{计算机网络，操作系统，数据库}
 \cvitem{TOFEL}{110}
 
 \section{经历}
@@ -93,11 +92,11 @@
 }
 
 \section{编程语言}
-\cvitem{精通}{Shell，C++，Python，Javascript}
+\cvitem{精通}{Shell，C/C++，Python，Javascript}
 \cvitem{熟悉}{Java，Ruby}
 
 \section{相关能力}
-\cvitem{Linux}{有4年（deb、rpm系）Linux环境的工作经验}
+\cvitem{Linux}{4年（deb、rpm系）Linux环境的工作经验}
 \cvitem{}{熟悉开发和编译工具链，完成（Cross）Linux From Scratch编译和运行}
 \cvitem{}{了解Linux网络编程}
 \vspace{0.3cm}
