--- a/preambles/packages.tex
+++ b/preambles/packages.tex
@@ -1,2 +1,2 @@
 % adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.75,tmargin=1cm,bmargin=1cm,footnotesep=1cm]{geometry}
