--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \section{经历}
 \subsection{项目}
 
-\cventry{2017.07--}{\mdseries 可靠文件传输协议开放}{快手}{}{}{
+\cventry{2017.07--}{\mdseries 可靠文件传输协议开发}{快手}{}{}{
   参与设计比TCP传输更为可靠的文件传输协议，合作实现协议、整合线上系统\\
   语言：C++，Java，Shell
 }
@@ -45,7 +45,7 @@
 }
 
 \cventry{2016.03--2016.06}{\mdseries IPv4/6翻译技术的流量调度}{清华大学网络研究院}{}{}{
-  升级IPv4/6翻译器（RFC6219）
+  升级IPv4/6翻译器（RFC6219），基于Linux内核
   \begin{itemize}
   \item 允许翻译器细粒度地选择各个流的翻译模式和上行出口
   \item 对各翻译器的选择策略进行中心控制
@@ -78,8 +78,8 @@
 % }
 
 \subsection{科研}
-\cventry{2015.04--2015.06}{\mdseries NFV的一致性更新}{清华大学未来网络与通信实验室}{}{}{
-  研究SDN环境中NFV的快速一致迁移问题。提出了基本思路，改进后的算法相比现有算法在性能和稳定性方面有很大提升。\\
+\cventry{2015.04--2017.10}{\mdseries NFV的一致性更新（一作）}{清华大学未来网络与通信实验室}{}{}{
+  研究SDN环境中NFV的快速一致迁移问题。改进后的算法相比现有算法在性能和稳定性方面有很大提升。\\
   W. Wang, Y. Liu, Y. Li, H. Song, Y. Wang and J. Yuan, \textit{Consistent State
     Updates for Virtualized Network Function Migration}, in IEEE Transactions on
   Services Computing, vol. PP, no. 99, pp. 1-1. \\
