--- a/main.tex
+++ b/main.tex
@@ -33,8 +33,8 @@
 \section{经历}
 \subsection{项目}
 
-\cventry{2017.07--}{\mdseries 可靠文件传输协议开发}{快手}{}{}{
-  参与设计比TCP传输更为可靠的文件传输协议，合作实现协议、整合线上系统\\
+\cventry{2017.07--2018.08}{\mdseries 可靠文件传输协议开发}{快手}{}{}{
+  参与设计弱网环境下的大吞吐量文件传输协议，合作实现协议、整合线上系统\\
   语言：C++，Java，Shell
 }
 
@@ -105,9 +105,9 @@
 \cvitem{日常使用}{Shell，C/C++，Python，Javascript}
 
 \section{相关能力}
-\cvitem{Linux}{5年（deb、rpm系）Linux环境的工作经验，熟悉开发和编译工具链}
+\cvitem{Linux}{7年（deb、rpm系）Linux环境的工作经验，熟悉开发和编译工具链}
 \cvitem{运维能力}{熟悉网络和虚拟化配置，使用Libvirt和LXC运行日常工作和测试环境}
-%\cvitem{}{熟悉自动部署，熟悉Ansible和Puppet使用}
+\cvitem{}{熟悉自动部署，熟悉Ansible和Saltstack使用}
 \cvitem{开发能力}{有较多的项目开发经验，熟悉工程实践，具备与人交流协调的能力}
 \cvitem{}{项目内容跨度较广，可以快速学习新的知识并投入应用}
 
